[pbr]
skip-authors = true
skip-changelog = true

[metadata]
url = https://github.com/ntua-dslab/knotify
name = pseudoknot_detector
author = Rowers Team
description = A robust and performant pseudoknot detection algorithm

[files]
packages =
    pseudoknot_detector

[entry_points]
console_scripts =
    rna_analysis = pseudoknot_detector.main:main
    rna_parser = pseudoknot_detector.rna_parser:main
    rna_hairpin = pseudoknot_detector.hairpin:main
    rna_benchmark = pseudoknot_detector.benchmark:main
    rna_evaluate = pseudoknot_detector.evaluate:main
