[pbr]
skip-authors = true
skip-changelog = true

[metadata]
url = https://github.com/ntua-dslab/knotify
name = knotify
author = Rowers Team
description = A robust and performant pseudoknot detection algorithm

[files]
packages =
    knotify

[entry_points]
console_scripts =
    rna_analysis = knotify.main:main
    rna_parser = knotify.parsers.yaep:main
    rna_hairpin = knotify.hairpin:main
    rna_benchmark = knotify.benchmark:main
    rna_evaluate = knotify.evaluate:main
