[pbr]
skip-authors = true
skip-changelog = true

[metadata]
url = https://github.com/ntua-dslab/knotify
name = knotify
author = Christos Pavlatos, George Rassias, Christos Andrikos, Evangelos Makris, Angelos Kolaitis
description = A robust and performant pseudoknot detection algorithm

[files]
packages =
    knotify

[entry_points]
console_scripts =
    rna_analysis = knotify.main:main
    rna_hairpin = knotify.hairpin:main
    rna_benchmark = knotify.benchmark:main
    rna_evaluate = knotify.evaluate:main
    rna_energy = knotify.cli.energy:main
